@@ -1801,6 +1801,21 @@ source kernel/external.in
 
 endmenu # "External" #
 
+config FREETZ_TARGET_SOC_AR9
+	bool
+	default y
+	depends on \
+		FREETZ_TYPE_FON_WLAN_7320 || \
+		FREETZ_TYPE_FON_WLAN_7330
+
+config FREETZ_TARGET_SOC_VR9
+	bool
+	default y
+	depends on \
+		FREETZ_TYPE_WLAN_3370 || \
+		FREETZ_TYPE_6840 || \
+		FREETZ_TYPE_FON_WLAN_7360
+
 config FREETZ_TARGET_ARCH_LE
 	bool
 	default y
